apps/base/tinest-relay/tinest-relay.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tinest-relay-system
  labels:
    networking.tinyrack.net/isolation: enabled
