apps/base/tinest-relay/tinest-relay.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinest-relay
  namespace: tinest-relay-system
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: tinest-relay
  template:
    metadata:
      labels:
        app: tinest-relay
    spec:
      terminationGracePeriodSeconds: 35
      containers:
        - name: tinest-relay
          image: ghcr.io/tinyrack-net/tinest-relay:v0.6.0 # {"$imagepolicy": "flux-system:tinest-relay"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1"
              memory: "512Mi"
          livenessProbe:
            httpGet:
              path: /health/live
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health/ready
              port: http
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
