apps/base/tinest-relay/tinest-relay.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tinest-relay
  namespace: tinest-relay-system
spec:
  selector:
    app: tinest-relay
  ports:
    - name: http
      port: 80
      targetPort: http
